--- a/dsc650/assignments/assignment03/Assignment 3.ipynb
+++ b/dsc650/assignments/assignment03/Assignment 3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -105,16 +105,23 @@
    "source": [
     "def validate_jsonl_data(records):\n",
     "    schema_path = schema_dir.joinpath('routes-schema.json')\n",
+    "    validation_csv_path = results_dir.joinpath('validation-results.csv')\n",
     "    with open(schema_path) as f:\n",
     "        schema = json.load(f)\n",
     "        \n",
-    "    with open(validation_csv_path, 'w') as f:    \n",
+    "    with open(validation_csv_path, 'w') as f:\n",
+    "        fieldNames = ['row_num', 'is_valid', 'msg']\n",
+    "        csvWriter = csv.DictWriter(f, fieldnames = fieldNames)\n",
+    "        csvWriter.writeheader()\n",
+    "        \n",
     "        for i, record in enumerate(records):\n",
     "            try:\n",
-    "                ## TODO: Validate record \n",
+    "                ## TODO: Validate record\n",
+    "                jsonschema.validate(instance=record, schema=schema)\n",
     "                pass\n",
     "            except ValidationError as e:\n",
     "                ## Print message if invalid record\n",
+    "                print(\"Invalid record found.\")\n",
     "                pass\n",
     "            \n",
     "\n",
@@ -130,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +145,11 @@
     "    schema_path = schema_dir.joinpath('routes.avsc')\n",
     "    data_path = results_dir.joinpath('routes.avro')\n",
     "    ## TODO: Use fastavro to create Avro dataset\n",
+    "    with open(schema_path) as f:\n",
+    "        schema = json.load(f)\n",
     "    \n",
+    "    with open(data_path, 'wb') as t:\n",
+    "        fastavro.writer(t, schema, records)\n",
     "        \n",
     "create_avro_dataset(records)"
    ]
@@ -152,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +181,8 @@
     "        with gzip.open(f_gz, 'rb') as f:\n",
     "            pass\n",
     "            ## TODO: Use Apache Arrow to create Parquet table and save the dataset\n",
+    "            parquetTable = pa.json.read_json(f)\n",
+    "            pq.write_table(parquetTable, parquet_output_path)\n",
     "\n",
     "create_parquet_dataset()"
    ]
@@ -183,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +242,26 @@
     "def _airline_to_proto_obj(airline):\n",
     "    obj = routes_pb2.Airline()\n",
     "    ## TODO: Create an Airline obj using Protocol Buffers API\n",
+    "    if airline is None:\n",
+    "        return None\n",
+    "    if airline.get('airline_id') is None:\n",
+    "        return None\n",
+    "    \n",
+    "    obj.airline_id = airline.get('airline_id')\n",
+    "    if airline.get('name'):\n",
+    "        obj.name = airline.get('name')\n",
+    "    if airline.get('alias'):\n",
+    "        obj.alias = airline.get('alias')\n",
+    "    if airline.get('iata'):\n",
+    "        obj.iata = airline.get('iata')\n",
+    "    if airline.get('icao'):\n",
+    "        obj.icao = airline.get('icao')\n",
+    "    if airline.get('callsign'):\n",
+    "        obj.callsign = airline.get('callsign')\n",
+    "    if airline.get('country'):\n",
+    "        obj.country = airline.get('country')\n",
+    "\n",
+    "    obj.active = airline.get('active')\n",
     "    return obj\n",
     "\n",
     "\n",
@@ -237,7 +270,24 @@
     "    for record in records:\n",
     "        route = routes_pb2.Route()\n",
     "        ## TODO: Implement the code to create the Protocol Buffers Dataset\n",
-    "\n",
+    "        airline = _airline_to_proto_obj(record.get('airline', {}))\n",
+    "        source_airport = _airport_to_proto_obj(record.get('src_airport', {}))\n",
+    "        dest_airport = _airport_to_proto_obj(record.get('dst_airport', {}))\n",
+    "        if (not airline is None):\n",
+    "            route.airline.CopyFrom(airline)\n",
+    "        if (not source_airport is None):\n",
+    "            route.src_airport.CopyFrom(source_airport)\n",
+    "        if (not dest_airport is None):\n",
+    "            route.dst_airport.CopyFrom(dest_airport)\n",
+    "        if record.get('codeshare'):\n",
+    "            route.codeshare = record.get('codeshare')\n",
+    "        else:\n",
+    "            route.codeshare = False\n",
+    "        if record.get('stops') is not None:\n",
+    "            route.stops = record.get('stops')\n",
+    "        if record.get('equipment'):\n",
+    "            route.equipment.extend(record.get('equipment'))\n",
+    "        \n",
     "        routes.route.append(route)\n",
     "\n",
     "    data_path = results_dir.joinpath('routes.pb')\n",
@@ -269,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,6 +328,32 @@
     "    geoindex_dir.mkdir(exist_ok=True, parents=True)\n",
     "    hashes = []\n",
     "    ## TODO: Create hash index\n",
+    "    for record in records:\n",
+    "        source_airport = record.get('src_airport', {})\n",
+    "        if not source_airport is None:\n",
+    "            latitude = source_airport.get('latitude')\n",
+    "            longitude = source_airport.get('longitude')\n",
+    "        if not latitude is None and not longitude is None:\n",
+    "            location = pygeohash.encode(latitude, longitude, precision = 3)\n",
+    "            record['geohash'] = location\n",
+    "            if not location in hashes:\n",
+    "                hashes.append(location)\n",
+    "    hashes.sort()\n",
+    "    \n",
+    "    index_hash = {value: [] for value in hashes}\n",
+    "    \n",
+    "    for record in records:\n",
+    "        location = record.get('geohash')\n",
+    "        if location:\n",
+    "            index_hash[location].append(record)\n",
+    "    for (key, values) in index_hash.items():\n",
+    "        output_dir = geoindex_dir.joinpath(key[0]).joinpath(key[0:2]) \n",
+    "        output_dir.mkdir(exist_ok=True, parents=True)\n",
+    "        output = output_dir.joinpath('{}.jsonl.gz'.format(key))\n",
+    "        \n",
+    "        with gzip.open(output, 'w') as f:\n",
+    "            json_output = '\\n'.join([json.dumps(line) for line in values])\n",
+    "            f.write(json_output.encode('utf-8'))\n",
     "            \n",
     "create_hash_dirs(records)"
    ]
@@ -291,16 +367,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The closest airport is:  Eppley Airfield \n",
+      "It is located  19.545 KM from your search location.\n"
+     ]
+    }
+   ],
    "source": [
     "def airport_search(latitude, longitude):\n",
     "    ## TODO: Create simple search to return nearest airport\n",
-    "    pass\n",
+    "    target = pygeohash.encode(latitude, longitude, precision = 5)\n",
+    "    distance = 20000001\n",
+    "    closest = \"None\"\n",
+    "    for record in records:\n",
+    "        airport = record.get('src_airport')\n",
+    "        if airport:\n",
+    "            longitude = airport.get('longitude')\n",
+    "            latitude = airport.get('latitude')\n",
+    "            if longitude and latitude:\n",
+    "                location = pygeohash.encode(latitude, longitude, precision = 5) \n",
+    "        crow = pygeohash.geohash_approximate_distance(location, target)\n",
+    "        if crow < distance:\n",
+    "            distance = crow\n",
+    "            closest = airport.get('name')\n",
+    "    print(\"The closest airport is: \",closest,\"\\nIt is located \", distance/1000,\"KM from your search location.\")\n",
+    "    \n",
     "    \n",
     "airport_search(41.1499988, -95.91779)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -319,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
